force-app/main/default/objects/Client_Application_portfolio__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Aderant Back Office</fullName>
            </value>
            <value>
                <fullName>Aderant Expert 7</fullName>
            </value>
            <value>
                <fullName>Aderant Expert 8</fullName>
            </value>
            <value>
                <fullName>Advanced Legal</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Axxia</fullName>
            </value>
            <value>
                <fullName>Axxia DNA</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>BHL Insight</fullName>
            </value>
            <value>
                <fullName>CCH Axcess</fullName>
            </value>
            <value>
                <fullName>CCH ProSystems fx</fullName>
            </value>
            <value>
                <fullName>Civica Galaxy</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CMS 5.0</fullName>
            </value>
            <value>
                <fullName>CS Group AIM Evolution</fullName>
            </value>
            <value>
                <fullName>CS Group Videss</fullName>
            </value>
            <value>
                <fullName>Deltek</fullName>
            </value>
            <value>
                <fullName>Eclipse</fullName>
            </value>
            <value>
                <fullName>Elite (3E)</fullName>
            </value>
            <value>
                <fullName>Elite (Informix)</fullName>
            </value>
            <value>
                <fullName>Elite (Oracle)</fullName>
            </value>
            <value>
                <fullName>Elite (Web Services)</fullName>
            </value>
            <value>
                <fullName>Elite Enterprise</fullName>
            </value>
            <value>
                <fullName>Elite Envision</fullName>
            </value>
            <value>
                <fullName>FWBS Paragon</fullName>
            </value>
            <value>
                <fullName>InfinityLaw</fullName>
            </value>
            <value>
                <fullName>Intalec for SAP</fullName>
            </value>
            <value>
                <fullName>Intervolve Exemplar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>