force-app/main/default/objects/Client_Application_portfolio__c/fields/Application_type__c.field-meta.xml
<CustomField>
    <fullName>Application_type__c</fullName>
    <label>Application type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_type</valueSetName>
    </valueSet>
</CustomField>