force-app/main/default/objects/Client_Application_portfolio__c/fields/Business_Unit_text__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_text__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>